--- a/docker/flink-job-cluster.yml
+++ b/docker/flink-job-cluster.yml
@@ -2,7 +2,8 @@ version: '3.8'
 
 networks:
   kafka-net:
-    external: true
+    name: kafka-net
+    driver: bridge
 
 volumes:
   flink-checkpoints-directory:
@@ -18,8 +19,8 @@ services:
       JOB_MANAGER_RPC_ADDRESS: jobmanager
       FLINK_ENV: cluster
     volumes:
-      - ../build/libs:/opt/flink/usrlib
-      - ../conf/flink:/opt/flink/conf
+      - ../app/build/libs:/opt/flink/usrlib
+      - ../app/conf/flink:/opt/flink/conf
       - ../data/flink/checkpoints:/tmp/flink-checkpoints-directory
       - ../data/flink-savepoints:/tmp/flink-savepoints-directory
     networks:
@@ -34,8 +35,8 @@ services:
       JOB_MANAGER_RPC_ADDRESS: jobmanager
       FLINK_ENV: cluster
     volumes:
-      - ../build/libs:/opt/flink/usrlib
-      - ../conf/flink:/opt/flink/conf
+      - ../app/build/libs:/opt/flink/usrlib
+      - ../app/conf/flink:/opt/flink/conf
       - ../data/flink/checkpoints:/tmp/flink-checkpoints-directory
       - ../data/flink-savepoints:/tmp/flink-savepoints-directory
     networks:
