--- a/docker/flink-job-cluster.yml
+++ b/docker/flink-job-cluster.yml
@@ -5,9 +5,6 @@ networks:
     name: kafka-net
     driver: bridge
 
-volumes:
-  flink-checkpoints-directory:
-
 services:
   jobmanager:
     image: flink:1.14.3-scala_2.11-java11
@@ -21,8 +18,9 @@ services:
     volumes:
       - ../app/build/libs:/opt/flink/usrlib
       - ../app/conf/flink:/opt/flink/conf
+      - ../data/flink/logs:/tmp/flink-checkpoints-directory
       - ../data/flink/checkpoints:/tmp/flink-checkpoints-directory
-      - ../data/flink-savepoints:/tmp/flink-savepoints-directory
+      - ../data/flink/savepoints:/tmp/flink-savepoints-directory
     networks:
       - kafka-net
 
@@ -38,7 +36,7 @@ services:
       - ../app/build/libs:/opt/flink/usrlib
       - ../app/conf/flink:/opt/flink/conf
       - ../data/flink/checkpoints:/tmp/flink-checkpoints-directory
-      - ../data/flink-savepoints:/tmp/flink-savepoints-directory
+      - ../data/flink/savepoints:/tmp/flink-savepoints-directory
     networks:
       - kafka-net
 
