use param tool to pass environment, makes test setup eaiser

--- a/app/src/main/resources/application.conf
+++ b/app/src/main/resources/application.conf
@@ -1,8 +1,11 @@
 kafka {
     consumer {
-        groupId = "local-flink-streaming-job"
+        groupId = "default-group-name"
     }
+
     producer {
         transTimeout  = "60000"
     }
+
+    endpoints = "localhost:9092"
 }
