--- a/docker/flink-job-cluster.yml
+++ b/docker/flink-job-cluster.yml
@@ -17,7 +17,7 @@ services:
       FLINK_ENV: cluster
     volumes:
       - ../app/build/libs:/opt/flink/usrlib
-      - ../app/conf/flink:/opt/flink/conf
+      - ../conf/flink:/opt/flink/conf
       - ../data/flink/checkpoints:/tmp/flink-checkpoints-directory
       - ../data/flink/savepoints:/tmp/flink-savepoints-directory
     networks:
@@ -35,7 +35,7 @@ services:
       FLINK_ENV: cluster
     volumes:
       - ../app/build/libs:/opt/flink/usrlib
-      - ../app/conf/flink:/opt/flink/conf
+      - ../conf/flink:/opt/flink/conf
       - ../data/flink/checkpoints:/tmp/flink-checkpoints-directory
       - ../data/flink/savepoints:/tmp/flink-savepoints-directory
     networks:
