--- a/conf/prometheus/prometheus.yml
+++ b/conf/prometheus/prometheus.yml
@@ -6,4 +6,4 @@ global:
 scrape_configs:
   - job_name: 'flink'
     static_configs:
-      - targets: ['job-manager:9249', 'taskmanager:9249']
+      - targets: ['jobmanager:9249', 'taskmanager:9249']
