--- a/docker/prometheus-grafana.yml
+++ b/docker/prometheus-grafana.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - ../data/prometheus:/prometheus
       - ../conf/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - /var/run/docker.sock:/var/run/docker.sock
     command: --web.enable-lifecycle --config.file=/etc/prometheus/prometheus.yml
     networks:
       - kafka-net
