--- a/docker/kafka-cluster.yml
+++ b/docker/kafka-cluster.yml
@@ -25,6 +25,7 @@ services:
   broker-1:
     image: wurstmeister/kafka:latest
     hostname: "broker-1"
+    container_name: "broker-1"
     ports:
       - "9092:9092"
       - "9010:9010"
@@ -37,7 +38,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-      KAFKA_JMX_OPTS: "-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=127.0.0.1 -Dcom.sun.management.jmxremote.rmi.port=9010"
+      KAFKA_JMX_OPTS: "-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=broker-1 -Dcom.sun.management.jmxremote.rmi.port=9010"
       JMX_PORT: 9010
     volumes:
       - ../data/kafka/broker-1/data:/var/lib/kafka/data
@@ -58,16 +59,21 @@ services:
       - kafka-net
     restart: unless-stopped
 
-  kafdrop:
-    image: obsidiandynamics/kafdrop
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
     ports:
-      - "8001:9000"
-    environment:
-      KAFKA_BROKERCONNECT: "broker-1:19092"
-      JVM_OPTS: "-Xms16M -Xmx48M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify"
-      CMD_ARGS: "--schemaregistry.connect=http://schema-registry:8085 --message.format=AVRO"
+      - 8001:8080
     depends_on:
-      - "broker-1"
+      - zk1
+      - broker-1
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker-1:19092
+      KAFKA_CLUSTERS_0_JMXPORT: 9010
+      KAFKA_CLUSTERS_0_JMXHOST: broker-1
+      KAFKA_CLUSTERS_0_ZOOKEEPER: zk1:2181
+      KAFKA_CLUSTERS_0_SCHEMAREGISTRY: http://schema-registry:8085
     networks:
       - kafka-net
     restart: unless-stopped
