read json write avro with bad code

--- a/conf/flink/flink-conf.yaml
+++ b/conf/flink/flink-conf.yaml
@@ -25,3 +25,7 @@ web.backpressure.refresh-interval: 10000
   taskmanager.numberOfTaskSlots: 1
   parallelism.default: 1
 
+
+  taskmanager.numberOfTaskSlots: 1
+  parallelism.default: 1
+
