--- a/conf/flink/flink-conf.yaml
+++ b/conf/flink/flink-conf.yaml
@@ -18,3 +18,11 @@ metrics.reporter.prom.class: org.apache.flink.metrics.prometheus.PrometheusRepor
 
 rest.flamegraph.enabled: true
 web.backpressure.refresh-interval: 10000
+
+env.java.opts: -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.host='0.0.0.0' -Djava.rmi.server.hostname='0.0.0.0'
+env.java.opts.jobmanager: -Dcom.sun.management.jmxremote.port=9999 -Dcom.sun.management.jmxremote.rmi.port=9999
+env.java.opts.taskmanager: -Dcom.sun.management.jmxremote.port=9999 -Dcom.sun.management.jmxremote.rmi.port=9999
+
+  taskmanager.numberOfTaskSlots: 1
+  parallelism.default: 2
+
