--- a/conf/flink/flink-conf.yaml
+++ b/conf/flink/flink-conf.yaml
@@ -7,8 +7,8 @@ taskmanager.memory.process.size: 1728Mb
 taskmanager.numberOfTaskSlots: 1
 
 state.backend: filesystem
-state.checkpoints.dir: file:///tmp/flink-checkpoints-directory
-state.savepoints.dir: file:///tmp/flink-savepoints-directory
+state.checkpoints.dir: file:///tmp/flink-checkpoints
+state.savepoints.dir: file:///tmp/flink-savepoints
 
 heartbeat.interval: 1000
 heartbeat.timeout: 5000
@@ -19,10 +19,6 @@ metrics.reporter.prom.class: org.apache.flink.metrics.prometheus.PrometheusRepor
 rest.flamegraph.enabled: true
 web.backpressure.refresh-interval: 10000
 
-env.java.opts: -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.host='0.0.0.0' -Djava.rmi.server.hostname='0.0.0.0'
+env.java.opts: -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.host='0.0.0.0' -Djava.rmi.server.hostname='0.0.0.0'
 env.java.opts.jobmanager: -Dcom.sun.management.jmxremote.port=9999 -Dcom.sun.management.jmxremote.rmi.port=9999
 env.java.opts.taskmanager: -Dcom.sun.management.jmxremote.port=9999 -Dcom.sun.management.jmxremote.rmi.port=9999
-
-  taskmanager.numberOfTaskSlots: 1
-  parallelism.default: 2
-
