--- a/conf/flink/flink-conf.yaml
+++ b/conf/flink/flink-conf.yaml
@@ -7,8 +7,8 @@ taskmanager.memory.process.size: 1728Mb
 taskmanager.numberOfTaskSlots: 1
 
 state.backend: filesystem
-state.checkpoints.dir: file:///tmp/flink-checkpoints-directory
-state.savepoints.dir: file:///tmp/flink-savepoints-directory
+state.checkpoints.dir: file:///tmp/flink-checkpoints
+state.savepoints.dir: file:///tmp/flink-savepoints
 
 heartbeat.interval: 1000
 heartbeat.timeout: 5000
