--- a/docker/flink-job-cluster.yml
+++ b/docker/flink-job-cluster.yml
@@ -13,8 +13,8 @@ services:
       - "9249:9249"
     command: "standalone-job --env cluster"
     environment:
-      - JOB_MANAGER_RPC_ADDRESS=jobmanager
-      - FLINK_ENV=cluster
+      JOB_MANAGER_RPC_ADDRESS: jobmanager
+      FLINK_ENV: cluster
     volumes:
       - ../app/build/libs:/opt/flink/usrlib
       - ../conf/flink:/opt/flink/conf
@@ -31,12 +31,9 @@ services:
     ports:
       - "9250-9255:9249"
     environment:
-      - JOB_MANAGER_RPC_ADDRESS=jobmanager
-      - FLINK_ENV=cluster
-      - |
-        FLINK_PROPERTIES=
-          taskmanager.numberOfTaskSlots: ${NUM_TASK_SLOTS:?err}
-          parallelism.default: ${DEFAULT_PARALLELISM:?err}
+      JOB_MANAGER_RPC_ADDRESS: jobmanager
+      FLINK_ENV: cluster
+      FLINK_ENV_JAVA_OPTS_TM: "-Dtaskmanager.numberOfTaskSlots=${NUM_TASK_SLOTS:?err} -Dparallelism.default=${DEFAULT_PARALLELISM:?err}"
     volumes:
       - ../app/build/libs:/opt/flink/usrlib
       - ../conf/flink:/opt/flink/conf
