--- a/docker/flink-job-cluster.yml
+++ b/docker/flink-job-cluster.yml
@@ -17,8 +17,8 @@ services:
     volumes:
       - ../app/build/libs:/opt/flink/usrlib
       - ../conf/flink:/opt/flink/conf
-      - ../data/flink/checkpoints:/tmp/flink-checkpoints-directory
-      - ../data/flink/savepoints:/tmp/flink-savepoints-directory
+      - ../data/flink/checkpoints:/tmp/flink-checkpoints
+      - ../data/flink/savepoints:/tmp/flink-savepoints
     networks:
       - kafka-net
 
@@ -35,8 +35,8 @@ services:
     volumes:
       - ../app/build/libs:/opt/flink/usrlib
       - ../conf/flink:/opt/flink/conf
-      - ../data/flink/checkpoints:/tmp/flink-checkpoints-directory
-      - ../data/flink/savepoints:/tmp/flink-savepoints-directory
+      - ../data/flink/checkpoints:/tmp/flink-checkpoints
+      - ../data/flink/savepoints:/tmp/flink-savepoints
     networks:
       - kafka-net
 
