--- a/docker/kafka-cluster.yml
+++ b/docker/kafka-cluster.yml
@@ -32,10 +32,10 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zk1:2181
-      KAFKA_LISTENERS: INSIDE://:19092,OUTSIDE://:9092
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://:19092,OUTSIDE://${DOCKER_HOST_IP:-127.0.0.1}:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_LISTENERS: INTERNAL://:19092,EXTERNAL://:9092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_LOG4J_LOGGERS: >
         kafka.controller=INFO,
@@ -43,7 +43,7 @@ services:
         state.change.logger=INFO
       KAFKA_JMX_OPTS: > 
         -Dcom.sun.management.jmxremote=true
-        -Djava.rmi.server.hostname=broker-1 
+        -Djava.rmi.server.hostname=broker-1
         -Dcom.sun.management.jmxremote.port=9010
         -Dcom.sun.management.jmxremote.rmi.port=9010
         -Dcom.sun.management.jmxremote.local.only=false
@@ -79,8 +79,7 @@ services:
     environment:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker-1:19092
-      KAFKA_CLUSTERS_0_JMXPORT: 9010
-      KAFKA_CLUSTERS_0_JMXHOST: broker-1
+      KAFKA_CLUSTERS_0_METRICS_PORT: 9010
       KAFKA_CLUSTERS_0_ZOOKEEPER: zk1:2181
       KAFKA_CLUSTERS_0_SCHEMAREGISTRY: http://schema-registry:8085
     networks:
